--- a/rel/ch3.tex
+++ b/rel/ch3.tex
@@ -28,7 +28,7 @@ Si nota dalla formula per $y_{n+1}$ che peso maggiore viene assegnato all'increm
 
 RK4 è un metodo del quarto ordine e quindi l'errore ad ogni step è dell'ordine di $h^5$, mentre l'errore totale accumulato è dell'ordine di $h^4$.
 
-\section{Sistemi Dinamici}
+\section{Simulazione di Sistemi Dinamici}
 Per mezzo del metodo RK4 è possibile simulare l'evoluzione di sistemi dinamici, in particolare di quelli non lineari, le cui soluzioni non sono note analiticamente.
 
 Esempi di sistemi dinamici che presentano comportamenti non lineari sono i sistemi di Lorenz, Rossler, Chua e di Rabinovich-Fabrikant.
