--- a/rel/LFC.tex
+++ b/rel/LFC.tex
@@ -11,6 +11,7 @@
 \usepackage{subcaption}
 \usepackage{vicent}
 \usepackage{float}
+\usepackage{hyperref}
 
 \newenvironment{system}{\left\lbrace \begin{aligned}}{\end{aligned}\right.}
 
